Build initial version of site

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="A long time ago in a galaxy far, far away...."
+      content="Unending night at the end of the world"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
